--- a/src/app/admin/account-management/transaction-history/transaction-history.component.html
+++ b/src/app/admin/account-management/transaction-history/transaction-history.component.html
@@ -37,7 +37,8 @@
                     <mat-label>Search</mat-label>
                     <input matInput placeholder="Placeholder" formControlName="searchString">
                     <button matSuffix mat-icon-button type="submit">
-                      <mat-icon>search</mat-icon>
+                      <!-- <mat-icon>search</mat-icon> -->
+                      <img src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
                     </button>
                 </mat-form-field>
             </div>
