--- a/src/app/admin/categories-setting/categories-list/categories-list.component.html
+++ b/src/app/admin/categories-setting/categories-list/categories-list.component.html
@@ -22,7 +22,8 @@
               <mat-label>Search</mat-label>
               <input formControlName="searchString" type="text" matInput>
               <button matSuffix type="submit" mat-icon-button>
-                <mat-icon >search</mat-icon>
+                <!-- <mat-icon >search</mat-icon> -->
+                <img src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
               </button>
           </mat-form-field>
         </div>
