--- a/src/app/admin/orders/components/order-lists/order-lists.component.html
+++ b/src/app/admin/orders/components/order-lists/order-lists.component.html
@@ -42,7 +42,8 @@
                     <mat-label>Search</mat-label>
                     <input matInput placeholder="Placeholder" formControlName="searchString">
                     <button type="submit" matSuffix mat-icon-button>
-                      <mat-icon matSuffix>search</mat-icon>
+                      <!-- <mat-icon matSuffix>search</mat-icon> -->
+                      <img matSuffix src="assets/images/icons/SEARCH.svg" class="icon_img" alt="">
                     </button>
                 </mat-form-field>
             </div>
