--- a/src/app/admin/report-manager/order-report/order-report.component.html
+++ b/src/app/admin/report-manager/order-report/order-report.component.html
@@ -29,7 +29,8 @@
             <mat-form-field appearance="outline">
                 <mat-label>Search</mat-label>
                 <input matInput placeholder="Placeholder" formControlName="searchString">
-                <mat-icon matSuffix>search</mat-icon>
+                <!-- <mat-icon matSuffix>search</mat-icon> -->
+                <img matSuffix src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
             </mat-form-field>
         </div>
         <div class="col-12 col-lg-auto">
