--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -23,7 +23,8 @@
               <mat-label>Search</mat-label>
               <input formControlName="searchString" type="text" matInput>
               <button matSuffix type="submit" mat-icon-button>
-                <mat-icon >search</mat-icon>
+                <img matSuffix src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
+                <!-- <mat-icon >search</mat-icon> -->
               </button>
           </mat-form-field>
         </div>
