--- a/src/app/admin/report-manager/item-sale-report/item-sale-report.component.html
+++ b/src/app/admin/report-manager/item-sale-report/item-sale-report.component.html
@@ -20,7 +20,8 @@
             <mat-form-field appearance="outline" class="pb-0">
                 <mat-label>Search</mat-label>
                 <input matInput placeholder="Placeholder" formControlName="searchString">
-                <mat-icon matSuffix>search</mat-icon>
+                <!-- <mat-icon matSuffix>search</mat-icon> -->
+                <img matSuffix src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
             </mat-form-field>
         </div>
         <div class="col-auto">
