--- a/src/app/admin/categories-setting/categories-list/categories-list.component.html
+++ b/src/app/admin/categories-setting/categories-list/categories-list.component.html
@@ -23,7 +23,7 @@
               <input formControlName="searchString" type="text" matInput>
               <button matSuffix type="submit" mat-icon-button>
                 <!-- <mat-icon >search</mat-icon> -->
-                <img src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
+                <img matSuffix src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
               </button>
           </mat-form-field>
         </div>
