--- a/src/app/admin/layout/header/header.component.html
+++ b/src/app/admin/layout/header/header.component.html
@@ -8,6 +8,9 @@
         <button type="button" class="ml-3" mat-icon-button (click)="_layout.isOpened = !_layout.isOpened">
             <img src="assets/images/icons/SIDEMENU.svg" alt="" class="icon_img">
         </button>
+        <button type="button" class="ml-3" mat-icon-button (click)="goBack()">
+            <img src="assets/images/icons/back-left.svg" alt="" class="icon_img">
+        </button>
         <!-- <span>Resto App</span> -->
         <div class="header_navigation">
             <ul>
