--- a/src/app/admin/report-manager/account-reports/profit-and-loss-report/profit-and-loss-report.component.html
+++ b/src/app/admin/report-manager/account-reports/profit-and-loss-report/profit-and-loss-report.component.html
@@ -21,7 +21,9 @@
                 <mat-label>Search</mat-label>
                 <input matInput placeholder="Placeholder" formControlName="searchString">
                 <!-- <mat-icon matSuffix>search</mat-icon> -->
-                <img matSuffix src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
+                <button matSuffix mat-icon-button type="button">
+                    <img matSuffix src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
+                </button>
             </mat-form-field>
         </div>
         <div class="col-auto">
