--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -9,6 +9,9 @@
 <div class="account_body_wrapper">
     <div class="body_inner_card">
         <div class="tab_header">
+            <div class="tab_btn" routerLink="/admin/order/quick-order" routerLinkActive="active">
+                <a href="javascript:;">Quick Order</a>
+            </div>
             <div class="tab_btn" routerLink="/admin/order/list" routerLinkActive="active">
                 <a href="javascript:;">Order Lists</a>
             </div>
