--- a/src/styles.scss
+++ b/src/styles.scss
@@ -92,8 +92,11 @@ html, body {
 
 // ======================= end theming=============================
 @include scroll-bar(5px, #f2f2f2, $color-primary, 20px);
+@include bootstrap-breakpoint('lg', 991px);
+@include bootstrap-breakpoint('xl', 1200px);
 @include bootstrap-breakpoint('xxl', 1400px);
 @include bootstrap-breakpoint('xxxl', 1600px);
+@include bootstrap-breakpoint('xxxxl', 1800px);
 
 .mat-elevation-z4{
     box-shadow: 0px 3px 10px #CCCEE9;
@@ -1783,7 +1786,7 @@ label.mat-checkbox-layout {
         }
     }
     .category_list{
-        max-height: calc(100vh - 340px);
+        max-height: calc(100vh - 360px);
         min-height: 200px;
         overflow-y: auto;
         li{
@@ -1917,7 +1920,7 @@ label.mat-checkbox-layout {
         }
     }
     .items_list_ul{
-        max-height: calc(100vh - 425px);
+        max-height: calc(100vh - 330px);
         overflow-y: auto;
         overflow-x: hidden;
         margin: 0px -15px;
@@ -2053,11 +2056,17 @@ label.mat-checkbox-layout {
     }
     .tab_inner_body{
         padding: 15px;
-        height: calc(100vh - 435px);
+        height: calc(100vh - 360px);
         min-height: 373px;
         overflow-y: auto;
         &.innerFooter{
-            height: calc(100vh - 560px);
+            height: calc(100vh - 405px);
+        }
+        &.billing_body {
+            height: calc(100vh - 450px);
+          &.afterbilled {
+            height: calc(100vh - 400px);
+          }
         }
     }
     h3.completeText{
@@ -2282,11 +2291,20 @@ label.mat-checkbox-layout {
     word-break: break-word;
     display: -webkit-box;
     -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;  
+    -webkit-box-orient: vertical;
     overflow: hidden;
 }
 
 //material overrided
 .mat-button.mat-primary, .mat-icon-button.mat-primary, .mat-stroked-button.mat-primary {
   color: $color-primary;
+}
+.mat-fab.fixed_add_button {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  .mat-button-wrapper {
+    width: 65%;
+    padding: 0px !important;
+  }
 }
