--- a/src/app/admin/orders/components/quick-order/quick-order-update/quick-order-update.component.html
+++ b/src/app/admin/orders/components/quick-order/quick-order-update/quick-order-update.component.html
@@ -1,7 +1,7 @@
 <!-- new design -->
 <form [formGroup]="form">
-<div class="row no-gutterd order_out_wrapper">
-    <div class="col-md-auto col-12 px-0" [class.pointer-none]="blockForms">
+<div class="row no-gutterd order_out_wrapper popuUpBox">
+    <!-- <div class="col-md-auto col-12 px-0" [class.pointer-none]="blockForms">
         <div class="left_bar">
             <div class="left_header">
                 <h2>#{{orderId ? orderId : '--'}}</h2>
@@ -22,7 +22,7 @@
                 <li [class.active]="selectedCategory == 'combo'" (click)="selectedCategory = 'combo'"><div class="product_img" style="background-image: url('assets/images/food.jpg');"></div><span>Combo</span></li>
             </ul>
         </div>
-    </div>
+    </div> -->
     <div class="col-md col-12 border-left">
         <div class="top_flterBar border-bottom d-flex align-items-center flex-wrap" [class.completedStatus]="orderData?.orderStatus == 'completed'" [class.cancelledStatus]="orderData?.orderStatus == 'cancelled'">
             <div>
@@ -51,11 +51,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 col-lg col-12  border-right" [class.pointer-none]="blockForms">
+            <div class="col-md-6 col-lg-6 col-12  border-right" [class.pointer-none]="blockForms">
                 <div class="product_lists">
                     <div class="prod_list_header align-items-center d-flex">
-                        <h2 class="productHeading">Products</h2>
-                        <mat-form-field  appearance="outline" class="ml-auto pb-0">
+                        <!-- <h2 class="productHeading">Products</h2> -->
+                        <mat-form-field  appearance="outline" class="col px-0 pb-0 mr-3">
                             <mat-label>Search</mat-label>
                             <input type="text" matInput #searchInput [(formControl)]="searchProductControl">
                             <!-- <mat-icon matSuffix>search</mat-icon> -->
@@ -63,8 +63,16 @@
                                 <img matSuffix src="assets/images/icons/SEARCH.svg" alt="" class="icon_img">
                             </button>
                         </mat-form-field>
+                        <mat-form-field  appearance="outline" class="col-auto px-0 pb-0">
+                            <mat-label>Category</mat-label>
+                            <mat-select [(ngModel)]="selectedCategory" [ngModelOptions]="{standalone:true}">
+                                <mat-option value="all">All</mat-option>
+                                <mat-option *ngFor="let item of productList" [value]="item.id">{{ item.categoryName }}</mat-option>
+                                <mat-option value="combo">Combo</mat-option>
+                            </mat-select>
+                        </mat-form-field>
                     </div>
-                    <ul class="list-unstyled items_list_ul mb-0 scroll_bar">
+                    <ul class="list-unstyled items_list_ul mb-0 scroll_bar inPopup">
                         <ng-container *ngFor="let cat of filteredProductList | async; let ci = index;">
                             <ng-container *ngIf="cat.products?.length > 0 && (selectedCategory == cat.id || selectedCategory == 'all')" >
                                 <li class="itemTitle">{{ cat.categoryName }}</li>
@@ -156,7 +164,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-auto col-12 px-0">
+            <div class="col-md-6 col-lg-6 col-12 px-0">
                 <div class="right_details_box">
                     <mat-tab-group>
                         <mat-tab>
@@ -166,7 +174,7 @@
                                 <p class="mb-0 ml-5 px-0"> Items</p>
                             </ng-template>
 
-                            <div class="tab_inner_body scroll_style items" [class.innerFooter]="(items['controls'].length > 0 || comboItems['controls'].length > 0) && !blockForms">
+                            <div class="tab_inner_body scroll_style items inPopup" [class.innerFooter]="(items['controls'].length > 0 || comboItems['controls'].length > 0) && !blockForms">
                                 <ng-container *ngFor="let item of items['controls'];let i=index;">
                                     <div class="row no-gutters order_item_wrapper" *ngIf="!item.get('deletedFlag').value">
                                         <div class="col-auto">
@@ -292,7 +300,7 @@
                                 <img class="example-tab-icon" src="assets/images/icons/TABLE.svg" class="icon_img" alt="">
                                 <p class="mb-0 ml-5 px-0"> Table</p>
                             </ng-template>
-                            <div class="tab_inner_body scroll_style tableBox">
+                            <div class="tab_inner_body scroll_style tableBox inPopup">
                                 <app-table-selection [form]="form" [blockForms]="blockForms"></app-table-selection>
                             </div>
 
@@ -304,7 +312,7 @@
                                 <p class="mb-0 ml-5 px-0"> Customer</p>
                             </ng-template>
 
-                            <div class="tab_inner_body scroll_style">
+                            <div class="tab_inner_body scroll_style inPopup">
                                 <div class="row mt-15">
                                     <div class="col-md-6 col-12">
                                         <mat-form-field appearance="outline" class="w-100">
@@ -339,7 +347,7 @@
                                 <img class="example-tab-icon" src="assets/images/icons/TAG.svg" class="icon_img" alt="">
                                 <p class="mb-0 ml-5 px-0"> Extras</p>
                             </ng-template>
-                            <div class="tab_inner_body scroll_style bill">
+                            <div class="tab_inner_body scroll_style bill inPopup">
                                 <div class="delivery_box mt-20">
                                     <mat-form-field appearance="outline" class="w-100 inline-input">
                                         <mat-label>Deliver Charge (Optional)</mat-label>
@@ -366,7 +374,7 @@
                                 <img class="example-tab-icon" src="assets/images/icons/BILL.svg" class="icon_img" alt="">
                                 <p class="mb-0 ml-5 px-0"> Bill</p>
                             </ng-template>
-                            <div class="tab_inner_body scroll_style bill billing_body" [class.afterbilled]="form.get('orderStatus').value == 'completed' || form.get('orderStatus').value == 'cancelled'">
+                            <div class="tab_inner_body scroll_style bill billing_body inPopup" [class.afterbilled]="form.get('orderStatus').value == 'completed' || form.get('orderStatus').value == 'cancelled'">
                                 <!-- <div class="delivery_box">
                                     <mat-form-field appearance="outline" class="w-100 inline-input">
                                         <mat-label>Deliver Charge (Optional)</mat-label>
