--- a/src/app/admin/orders/components/quick-order/quick-order.component.scss
+++ b/src/app/admin/orders/components/quick-order/quick-order.component.scss
@@ -31,6 +31,7 @@
       justify-content: space-between;
 
       &.order_header {
+        min-height: 36px;
         .header_title {
           font-size: 16px;
           font-weight: 500;
