--- a/src/app/admin/product-combo/product-combo-list/product-combo-list.component.html
+++ b/src/app/admin/product-combo/product-combo-list/product-combo-list.component.html
@@ -39,7 +39,7 @@
                     <th class="ew-50" *ngIf=" this.serv.getPermission('product-combo', 'full')"></th>
                     <th mat-sort-header="productName" class="ew-250">Product Combo Title</th>
                     <th mat-sort-header="description">Description</th>
-                    <th mat-sort-header="description">Price</th>
+                    <th mat-sort-header="comboTotal">Price</th>
                     <th mat-sort-header="branch" class="ew-250">Branch</th>
                     <th class="ew-100">Active?</th>
                 </tr>
