--- a/src/app/admin/orders/components/quick-order/quick-order.component.html
+++ b/src/app/admin/orders/components/quick-order/quick-order.component.html
@@ -1,25 +1,26 @@
 
   <div class="row">
-    <div class="col-xxxxl-3 col-xl-4">
-      <div class="quick_order_card not_saved">
+    <ng-container *ngFor="let item of ongoingorders">
+      <div class="col-xxxxl-3 col-xl-4">
+      <div class="quick_order_card not_saved" (click)="openQuickUpdate(item)">
         <div class="order_header">
-          <span class="header_title">#qwer202523</span>
-          <div class="tables">
-            <span>T1</span>
-            <span>T2</span>
+          <span class="header_title">#{{item.id}}</span>
+          <div class="tables" *ngIf="item.order_tables.length > 0">
+            <span *ngFor="let t of item.order_tables">{{ t.table.tableId }}</span>
           </div>
         </div>
-        <div>Kiran Shetty</div>
+        <div>{{ item.bearer.firstName }} {{ item.bearer.lastName }}</div>
         <div>
-          <span>29-02-1996</span>
-          <span>10:15 AM</span>
+          <span>{{ item.created_at | datex : 'DD-MM-YYYY' }}</span>
+          <span>{{ item.created_at | datex : 'hh:mm A' }}</span>
         </div>
         <div>
-          <span>Rs 26.00</span>
-          <span>On Table</span>
+          <span><span class="d-inline-block mr-5">&#8377;</span> {{ item.orderAmount | currency : "":"" }}</span>
+          <span>{{ item.order_type.orderType }}</span>
         </div>
       </div>
     </div>
+    </ng-container>
   </div>
 
   <button type="button" (click)="openQuickUpdate()" mat-fab color="primary" class="fixed_add_button">
